2003-10-21  Christian Rose  <menthos@menthos.com>

	* status-gnome.xml, translation-status.xml: procman has been
	branched.

2003-10-21  Christian Rose  <menthos@menthos.com>

	* status-gnome.xml, translation-status.xml: gucharmap has been
	branched.

2003-10-20  Carlos Perelló Marín <carlos@gnome.org>

	* status-gnome.xml: More migration taks. This work is booooring!!!

2003-10-20  Carlos Perelló Marín <carlos@gnome.org>

	* status-gnome.xml, translation-status.xml: libgtop has been branched.
	Please, update both .xml files until we get new status pages online.

2003-10-20  Carlos Perelló Marín <carlos@gnome.org>

	* status-gnome.xml: Started the translation-status.xml ->
	status-gnome.xml migration. We will have new status pages soon (as
	soon as I fix a segfault... and finish this migration)

2003-10-19  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: changed the libgtop branch to HEAD.

2003-10-18  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Fix libgnetwork pot name.

2003-10-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gdm has been branched.

2003-10-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added libgnetwork.

2003-10-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gtksourceview has been branched.

2003-10-15  Christian Neumair  <>

	* translation-status.xml: Added beast/bse.

2003-10-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: rhythmbox is back on HEAD.

>>>>>>> 1.94
2003-10-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added jamboree.

2003-10-08  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: bug-buddy has been branched.

2003-10-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: eog has been branched.

2003-10-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: metacity has been branched.

2003-10-06  Christian Rose  <menthos@menthos.com>
