@@ -344,6 +344,17 @@
       </component>
     </version>
   </module>
+  <module name="gnome-alsamixer">
+    <version release="gnome-2.6">
+      <component name="gnome-alsamixer" dir="gnome-alsamixer" group="extras">
+        <podir dir="po"/>
+        <potname name="gnome-alsamixer.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="gnome-applets">
     <version release="gnome-2.4">
       <component name="gnome-applets" dir="gnome-applets" group="desktop">
