@@ -1,3 +1,7 @@
+2003-10-24  Christian Rose  <menthos@menthos.com>
+
+	* status-gnome.xml, translation-status.xml: Added gnome-alsamixer.
+
 2003-10-21  Christian Rose  <menthos@menthos.com>
 
 	* status-gnome.xml, translation-status.xml: procman has been
